fix(preloader): fix z-index to 1000

--- a/src/components/PreloaderView/PreloaderView.scss
+++ b/src/components/PreloaderView/PreloaderView.scss
@@ -3,19 +3,20 @@
 
   position: fixed;
   top: 0;
-  left: 0;
   right: 0;
   bottom: 0;
+  left: 0;
+  z-index: 1000;
   background-color: rgba(22, 136, 111, 0.8);
 
   &__animation {
     position:absolute;
     top:50%;
     left:50%;
+    transform:translate(-50%,-50%);
+    margin:0;
     width:172px;
     height:128px;
-    margin:0;
-    transform:translate(-50%,-50%);
   }
 
   &__square {
@@ -42,10 +43,10 @@
     position:absolute;
     top:0px;
     left:20px;
-    height:36px;
-    width:36px;
     border-radius:2px;
     background-color: var(--color-basic);
+    width:36px;
+    height:36px;
   }
 
   &__square span:nth-child(1) {
@@ -90,8 +91,8 @@
     position:absolute;
     top:50%;
     left:50%;
-    margin:0;
     transform:translate(-50%,calc(-50% + 88px));
+    margin:0;
     color: var(--color-basic)
   }
 }
